syntax = "proto3";

package drbd.agent.v1;

option go_package = "github.com/liliang-cn/drbd-agent/api/proto/v1;pb";

// ============================================================================
// Common Type Definitions
// Shared across all DRBD Agent services
// ============================================================================

// StructuredError - Standardized error type for all operations
message StructuredError {
  string code = 1;                      // Machine-readable error code
  string message = 2;                   // Human-readable error message
  map<string, string> details = 3;      // Additional error context
  int32 retry_after_seconds = 4;        // Suggested retry delay (if applicable)
}

// Standard error codes (to be used in StructuredError.code)
enum ErrorCode {
  UNKNOWN = 0;
  // DRBD-specific errors (1-99)
  DRBD_NOT_LOADED = 1;
  DRBD_MODULE_LOAD_FAILED = 2;
  DRBD_RESOURCE_NOT_FOUND = 3;
  DRBD_RESOURCE_ALREADY_EXISTS = 4;
  DRBD_RESOURCE_LOCKED = 5;
  DRBD_METADATA_INVALID = 6;
  DRBD_CONNECTION_FAILED = 7;
  DRBD_QUORUM_NOT_PRESENT = 8;

  // Configuration errors (100-199)
  CONFIG_VALIDATION_FAILED = 100;
  CONFIG_PARSE_ERROR = 101;
  CONFIG_BACKUP_FAILED = 102;
  CONFIG_RESTORE_FAILED = 103;
  CONFIG_CONFLICT_DETECTED = 104;
  CONFIG_WRITE_FAILED = 105;

  // drbd-reactor errors (200-299)
  REACTOR_NOT_RUNNING = 200;
  REACTOR_RELOAD_FAILED = 201;
  REACTOR_PLUGIN_CONFLICT = 202;
  REACTOR_DAEMON_RELOAD_IN_PROGRESS = 203;

  // Concurrency errors (300-399)
  OPERATION_IN_PROGRESS = 300;
  RESOURCE_LOCKED = 301;
  MAX_CONCURRENT_OPERATIONS = 302;

  // Validation errors (400-499)
  INVALID_ARGUMENT = 400;
  MISSING_REQUIRED_FIELD = 401;
  PERMISSION_DENIED = 403;
}

// ResourceResult - Standard result for per-resource operations
message ResourceResult {
  string resource = 1;
  bool success = 2;
  string message = 3;
  StructuredError error = 4;
  int32 exit_code = 5;
}

// AuditLog - Audit metadata for all operations
message AuditLog {
  string operation_id = 1;             // Unique operation ID (UUID)
  string user = 2;                     // User/Client identity (from TLS cert)
  string client_address = 3;           // Client IP/hostname
  int64 timestamp = 4;                 // Unix timestamp (nanoseconds)
  string operation = 5;                // Operation name (e.g., "Up", "Primary")
  map<string, string> parameters = 6;  // Operation parameters (sanitized)
  bool allowed = 7;                    // Whether operation was authorized
  string authorization_reason = 8;     // If denied, why
}

// ConfigConflict - Information about conflicting configuration
message ConfigConflict {
  string existing_plugin_id = 1;       // Plugin that already manages the resource
  string conflicting_resource = 2;     // Resource that conflicts
  string conflict_type = 3;            // "duplicate", "overlap", etc.
  string suggestion = 4;               // Suggested resolution
}

// ============================================================================
// DRBD Resource State Types (shared across services)
// ============================================================================

message ResourceStatus {
  string name = 1;
  string role = 2;              // "Primary", "Secondary", "Unknown"
  string role_str = 3;          // Human-readable role
  repeated string suspended = 4;
  repeated VolumeState volumes = 5;
  repeated PeerDevice peers = 6;
}

message VolumeState {
  int32 volume_number = 1;
  string device = 2;            // /dev/drbd0
  string disk = 3;              // /dev/vg0/data
  string disk_state = 4;        // "UpToDate", "Inconsistent", "Diskless", etc.
  uint64 size = 5;              // Size in bytes
}

message PeerDevice {
  int32 peer_node_id = 1;
  string connection_name = 2;
  string role = 3;              // "Primary", "Secondary", "Unknown"
  string disk_state = 4;        // "UpToDate", "Inconsistent", "Diskless", etc.
  string replication_state = 5; // "Established", "SyncSource", "SyncTarget", etc.
  int32 sync_percent = 6;       // 0-100
}
